--- a/shared/ObjectModel/ObjectModel.vcxproj.filters
+++ b/shared/ObjectModel/ObjectModel.vcxproj.filters
@@ -5,19 +5,18 @@
     <ClCompile Include="AdaptiveCard.cpp" />
     <ClCompile Include="Container.cpp" />
     <ClCompile Include="Enums.cpp" />
-    <ClCompile Include="ICardElement.cpp" />
     <ClCompile Include="ACParser.cpp" />
     <ClCompile Include="TextBlock.cpp" />
     <ClCompile Include="jsoncpp.cpp">
       <Filter>json</Filter>
     </ClCompile>
+    <ClCompile Include="BaseCardElement.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ACParseException.h" />
     <ClInclude Include="AdaptiveCard.h" />
     <ClInclude Include="Container.h" />
     <ClInclude Include="Enums.h" />
-    <ClInclude Include="ICardElement.h" />
     <ClInclude Include="ACParser.h" />
     <ClInclude Include="TextBlock.h" />
     <ClInclude Include="json\json.h">
@@ -26,6 +25,8 @@
     <ClInclude Include="json\json-forwards.h">
       <Filter>json</Filter>
     </ClInclude>
+    <ClInclude Include="BaseCardElement.h" />
+    <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="json">
