--- a/UWP/ObjectModelProjection/ObjectModelProjection.vcxproj
+++ b/UWP/ObjectModelProjection/ObjectModelProjection.vcxproj
@@ -27,8 +27,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\shared\ObjectModel\ACParseException.cpp" />
-    <ClCompile Include="..\..\shared\ObjectModel\ACParser.cpp" />
+    <ClCompile Include="..\..\shared\ObjectModel\AdaptiveCardParseException.cpp" />
+    <ClCompile Include="..\..\shared\ObjectModel\ParseUtil.cpp" />
     <ClCompile Include="..\..\shared\ObjectModel\AdaptiveCard.cpp" />
     <ClCompile Include="..\..\shared\ObjectModel\BaseCardElement.cpp" />
     <ClCompile Include="..\..\shared\ObjectModel\Container.cpp" />
@@ -37,8 +37,8 @@
     <ClCompile Include="..\..\shared\ObjectModel\TextBlock.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\shared\ObjectModel\ACParseException.h" />
-    <ClInclude Include="..\..\shared\ObjectModel\ACParser.h" />
+    <ClInclude Include="..\..\shared\ObjectModel\AdaptiveCardParseException.h" />
+    <ClInclude Include="..\..\shared\ObjectModel\ParseUtil.h" />
     <ClInclude Include="..\..\shared\ObjectModel\AdaptiveCard.h" />
     <ClInclude Include="..\..\shared\ObjectModel\BaseCardElement.h" />
     <ClInclude Include="..\..\shared\ObjectModel\Container.h" />
