added initial implementation of actions

--- a/WpfVisualizer/WpfVisualizer.csproj
+++ b/WpfVisualizer/WpfVisualizer.csproj
@@ -87,6 +87,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="AdaptiveXamlRenderer.Containers.cs" />
+    <Compile Include="AdaptiveXamlRenderer.Input.cs" />
+    <Compile Include="AdaptiveXamlRenderer.Action.cs" />
+    <Compile Include="ShowCardWindow.xaml.cs">
+      <DependentUpon>ShowCardWindow.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -96,10 +102,15 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="ActionInstance.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="ShowCardWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MarkedXaml.cs" />
