--- a/android/mobile/CMakeLists.txt
+++ b/android/mobile/CMakeLists.txt
@@ -21,11 +21,12 @@ add_library( # Sets the name of the library.
              # Associated headers in the same location as their source
              # file are automatically included.
              ../../shared/ObjectModel/Enums.cpp
-             ../../shared/ObjectModel/ICardElement.cpp
+             ../../shared/ObjectModel/BaseCardElement.cpp
              ../../shared/ObjectModel/Container.cpp
              ../../shared/ObjectModel/AdaptiveCard.cpp
              ../../shared/ObjectModel/TextBlock.cpp
-             src/main/cpp/native-lib.cpp)
+             src/main/cpp/native-lib.cpp
+             src/main/cpp/objectmodel_wrap.cpp)
 
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because system libraries are included in the search path by
