XamlTileRenderer:Render Text elements
Adds renderer support for processing and creating TextBlock elements.
As this
is the first control type supported, this also adds some of the general
code paths
and helper functions that will be used by other controls.

--- a/.gitignore
+++ b/.gitignore
@@ -263,6 +263,8 @@ sources*
 build*
 **/objfre/*
 **/objchk/*
+makefile.inc
+product.pbxproj
 
 #Generated header from MIDL
 **/UWP/Renderer/AdaptiveCards.XamlCardRenderer.h
