--- a/UWP/Renderer/XamlCardRenderer.vcxproj.filters
+++ b/UWP/Renderer/XamlCardRenderer.vcxproj.filters
@@ -6,6 +6,7 @@
     <ClCompile Include="lib\AdaptiveTextBlock.cpp" />
     <ClCompile Include="lib\AdaptiveCard.cpp" />
     <ClCompile Include="dll\dll.cpp" />
+    <ClCompile Include="lib\XamlBuilder.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="lib\pch.h" />
@@ -14,6 +15,8 @@
     <ClInclude Include="lib\AdaptiveTextBlock.h" />
     <ClInclude Include="lib\AdaptiveCard.h" />
     <ClInclude Include="lib\ErrorHandling.h" />
+    <ClInclude Include="lib\XamlBuilder.h" />
+    <ClInclude Include="lib\Vector.h" />
   </ItemGroup>
   <ItemGroup>
     <Midl Include="idl\AdaptiveCards.XamlCardRenderer.idl" />
