--- a/UWP/ObjectModel/ObjectModel.vcxproj
+++ b/UWP/ObjectModel/ObjectModel.vcxproj
@@ -84,9 +84,15 @@
   <ItemGroup>
     <ClInclude Include="..\..\shared\ObjectModel\AdaptiveCardParseException.h" />
     <ClInclude Include="..\..\shared\ObjectModel\AdaptiveCard.h" />
+    <ClInclude Include="..\..\Shared\ObjectModel\Column.h" />
+    <ClInclude Include="..\..\Shared\ObjectModel\ColumnGroup.h" />
     <ClInclude Include="..\..\shared\ObjectModel\Container.h" />
     <ClInclude Include="..\..\shared\ObjectModel\Enums.h" />
     <ClInclude Include="..\..\shared\ObjectModel\BaseCardElement.h" />
+    <ClInclude Include="..\..\Shared\ObjectModel\Fact.h" />
+    <ClInclude Include="..\..\Shared\ObjectModel\FactGroup.h" />
+    <ClInclude Include="..\..\Shared\ObjectModel\Image.h" />
+    <ClInclude Include="..\..\Shared\ObjectModel\ImageGallery.h" />
     <ClInclude Include="..\..\shared\ObjectModel\json\json-forwards.h" />
     <ClInclude Include="..\..\shared\ObjectModel\ParseUtil.h" />
     <ClInclude Include="..\..\shared\ObjectModel\json\json.h" />
@@ -96,9 +102,15 @@
   <ItemGroup>
     <ClCompile Include="..\..\shared\ObjectModel\AdaptiveCardParseException.cpp" />
     <ClCompile Include="..\..\shared\ObjectModel\AdaptiveCard.cpp" />
+    <ClCompile Include="..\..\Shared\ObjectModel\ColumGroup.cpp" />
+    <ClCompile Include="..\..\Shared\ObjectModel\Column.cpp" />
     <ClCompile Include="..\..\shared\ObjectModel\Container.cpp" />
     <ClCompile Include="..\..\shared\ObjectModel\Enums.cpp" />
     <ClCompile Include="..\..\shared\ObjectModel\BaseCardElement.cpp" />
+    <ClCompile Include="..\..\Shared\ObjectModel\Fact.cpp" />
+    <ClCompile Include="..\..\Shared\ObjectModel\FactGroup.cpp" />
+    <ClCompile Include="..\..\Shared\ObjectModel\Image.cpp" />
+    <ClCompile Include="..\..\Shared\ObjectModel\ImageGallery.cpp" />
     <ClCompile Include="..\..\shared\ObjectModel\jsoncpp.cpp" />
     <ClCompile Include="..\..\shared\ObjectModel\ParseUtil.cpp" />
     <ClCompile Include="..\..\shared\ObjectModel\TextBlock.cpp" />
