--- a/Renderers/XamlRenderer.old/AdaptiveXamlRenderer.dd.csproj
+++ b/Renderers/XamlRenderer.old/AdaptiveXamlRenderer.dd.csproj
@@ -2,19 +2,20 @@
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
-    <MinimumVisualStudioVersion>10.0</MinimumVisualStudioVersion>
+    <MinimumVisualStudioVersion>14.0</MinimumVisualStudioVersion>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{692311B2-E537-4700-8EF7-A5F83D90383C}</ProjectGuid>
+    <ProjectGuid>{5B8DC9DA-DEAC-4417-9D9B-20FD368BF174}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Adaptive.Schema.Net</RootNamespace>
-    <AssemblyName>Adaptive.Schema.Net</AssemblyName>
+    <RootNamespace>XamlRenderer</RootNamespace>
+    <AssemblyName>XamlRenderer</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <TargetFrameworkProfile>Profile259</TargetFrameworkProfile>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
+    <TargetFrameworkVersion>v5.0</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -34,37 +35,21 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Actions\Action.cs" />
-    <Compile Include="Actions\CancelAction.cs" />
-    <Compile Include="Actions\SubmitAction.cs" />
-    <Compile Include="Actions\ShowCardAction.cs" />
-    <Compile Include="Containers\AdaptiveCard.cs" />
-    <Compile Include="Elements\CardElement.cs" />
-    <Compile Include="Containers\Column.cs" />
-    <Compile Include="Containers\ColumnGroup.cs" />
-    <Compile Include="Containers\Container.cs" />
-    <Compile Include="Enums.cs" />
-    <Compile Include="Containers\FactGroup.cs" />
-    <Compile Include="Actions\HttpAction.cs" />
-    <Compile Include="Elements\Image.cs" />
-    <Compile Include="Containers\ImageGallery.cs" />
-    <Compile Include="Elements\Input.cs" />
-    <Compile Include="Actions\OpenUrlAction.cs" />
+    <!-- A reference to the entire .NET Framework is automatically included -->
+    <ProjectReference Include="..\..\builders\.NET\Adaptive.Schema.Net\Adaptive.Schema.Net.csproj">
+      <Project>{692311b2-e537-4700-8ef7-a5f83d90383c}</Project>
+      <Name>Adaptive.Schema.Net</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="AdaptiveXamlRenderer.Action.cs" />
+    <Compile Include="AdaptiveXamlRenderer.Containers.cs" />
+    <Compile Include="AdaptiveXamlRenderer.cs" />
+    <Compile Include="AdaptiveXamlRenderer.Input.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Elements\TextBlock.cs" />
-    <Compile Include="Elements\ChoiceInput.cs" />
-    <Compile Include="Elements\TextInput.cs" />
-    <Compile Include="TypedElementConverter.cs" />
-    <Compile Include="TypedElement.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\Newtonsoft.Json.9.0.1\lib\portable-net45+wp80+win8+wpa81\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="project.json" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
